[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "before-turn"
version = "0.1.0"
description = "Before-turn behavioral governance protocol for AI agents"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "Apache-2.0"}
keywords = ["ai", "agents", "governance", "reasoning", "metacognition"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = []

[project.urls]
Homepage = "https://dispatcheragents.com"
Repository = "https://github.com/QuietFireAI/before-turn"

[project.scripts]
before-turn = "scripts.quick_check:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
